--- a/package.json
+++ b/package.json
@@ -3,22 +3,17 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "next": "^9.5.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "ejs": "^3.1.5",
+    "express": "^4.17.1"
   },
   "description": "",
   "devDependencies": {
-    "@types/node": "^14.6.2",
-    "typescript": "^4.0.2"
+    "nodemon": "^2.0.4"
   }
 }
